# donotreadagain

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HARNESS.md  LICENSE  MILESTONES.md  PROTOCOL.md  README.md  RELEASING.md  SECURITY.md  SKILL.md  pyproject.toml  qna.md  vision.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/agent-instructions/: AGENTS.md
examples/harness-python/: read_through_cache.py
examples/harness-typescript/: readThroughCache.ts
spec/: README.md  dnr-0.1.md  dnr.schema.json
spec/vectors/: sample.txt  vectors.json
src/dnr/: __init__.py  bootstrap.py  cli.py  embed.py  formats.py  guide.py  hashing.py  index.py  ingest.py  keyring.py  record.py  schema.py  signing.py  skill.py  transcribe.py
tests/: conftest.py  test_coverage.py  test_docs.py  test_embed.py  test_fixes.py  test_guide.py  test_hashing.py  test_index.py  test_ingest.py  test_init.py  test_query_features.py  test_query_filters.py  test_query_memory.py  test_record.py  test_robustness.py  test_schema.py  test_signing.py  test_strip.py  test_text.py  test_vectors.py
