[project]
name = "donotreadagain"
version = "0.2.0"
description = "Read once, never again — self-describing files so AI agents stop re-parsing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "june lee" }]
keywords = ["ai", "agents", "metadata", "transcript", "cache", "pdf", "xmp", "self-describing"]
dependencies = [
  "pikepdf>=8",
  "mutagen",
  "PyMuPDF",
  "pypdf",
  "rfc8785",
  "cryptography",
  "jsonschema",
  "pillow",
  "python-docx",
  "openpyxl",
]

[project.urls]
Homepage = "https://github.com/melodysdreamj/donotreadagain"
Repository = "https://github.com/melodysdreamj/donotreadagain"
Issues = "https://github.com/melodysdreamj/donotreadagain/issues"

[project.optional-dependencies]
dev = ["pytest", "fpdf2"]
audio = ["faster-whisper"]

[project.scripts]
dnr = "dnr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dnr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
